--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
   },
   "homepage": "https://github.com/h64/oauth-boilerplate#readme",
   "dependencies": {
+    "axios": "^0.19.0",
+    "connect-session-sequelize": "^6.0.0",
     "dotenv": "^8.1.0",
     "ejs": "^2.6.2",
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.0",
     "express-session": "^1.16.2",
+    "helmet": "^3.20.0",
     "passport": "^0.4.0",
     "passport-github2": "^0.1.11",
     "pg": "^7.12.1",
